I DID WORK: much text, imgs

--- a/lib/generic-preamble.tex
+++ b/lib/generic-preamble.tex
@@ -30,21 +30,23 @@
 \usepackage{lmodern}
 
 % Specify font style.
+%
 % Options:
 %   \rmdefault : Serif (Roman)
 %   \sfdefault : Sans-serif
 %   \ttdefault : Monospace (typewriter)
 %
 % Default is serif.
-%\renewcommand*{\familydefault}{\rmdefault}
+%\renewcommand{\familydefault}{\rmdefault}
 
 % use only 1 space at end of sentence, instead of default 2
 % I keep it off, but useful to know command.
 %\frenchspacing
 
-% vertical spacing between paragraphs, but keep the default 15pt indent
-% Again, sticking with the default no vertical spacing for now.
-%\usepackage{parskip}
+% add vertical spacing between paragraphs & remove indent
+\usepackage{parskip}
+
+% ...or keep the default 15pt indent (if you use parskip)
 %\setlength{\parindent}{15pt}
 
 % remove all chapter/section/etc. numbering
