--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -65,7 +65,10 @@ qmake ..
 make
 \end{lstlisting}
 
+To install, run \verb|make install| with superuser permissions. The main binary
+is \verb|organisr|.
+
 
 \subsection{Windows}
 
-Run the provided installer.
+Run the provided installer and follow the steps in the install wizard.
