LOTS of updates!!

--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,9 @@ User manual}
 %% }}}
 
 \newcommand{\guiel}[1]{\textbf{#1}}
+\newcommand{\fullimg}[1]{\includegraphics[width=\linewidth]{#1}}
+\newcommand{\smallimg}[1]{\includegraphics[width=0.6\linewidth]{#1}}
+\newcommand{\halfimg}[1]{\includegraphics[width=0.5\linewidth]{#1}}
 
 \inputsrc{introduction}
 \clearpage
