--- a/src/usage.tex
+++ b/src/usage.tex
@@ -1,3 +1,4 @@
+% vim: spell ft=tex
 \section{Using Organisr}
 
 Organisr's main two features are its \textbf{to-dos} and \textbf{appointments}.
@@ -8,9 +9,6 @@ ahead for birthdays and such -- or check when that meeting you missed was!
 
 
 \subsection{Using to-dos}
-
-\newcommand{\smallimg}[1]{\includegraphics[width=0.6\textwidth]{#1}}
-\newcommand{\halfimg}[1]{\includegraphics[width=0.5\textwidth]{#1}}
 
 \smallimg{01-todo-main}
 
@@ -29,6 +27,10 @@ of the window. A dialog box will open and prompt you for the to-do details. Type
 in the text you would like have to displayed on list (e.g. `Send Mary the
 project email') and click \guiel{Confirm}. You can hit \guiel{Cancel} to cancel
 the new to-do operation.
+
+\tip{Keyboard shortcut for adding a to-do: Alt+A on the to-do tab.\\
+You can also hit Alt+N, Alt+S, Alt+V and Alt+H to drop down the respective
+toolbar button, and use the arrows keys and Enter to choose a entry.}
 
 
 \subsubsection{Editing to-dos}
@@ -69,9 +71,59 @@ it later, it might be better to mark the to-do as \textit{completed} rather than
 deleting it.}
 
 
+\subsubsection{Printing a paper to-do list}
+
+\halfimg{06-todo-print-1}
+\halfimg{06-todo-print-2}
+
+If you'd like to have a paper copy of your pending to-dos, click on the
+\guiel{Print} button found below the last to-do. You can send it to a printer
+you're connected to, or save it to a PDF file to print later.
+
+\tip{Note that this only prints your \textit{pending/incomplete to-dos}. So
+don't worry about deleting all the crossed-out ones before printing!}
+
+
 \subsection{Using appointments}
 
+\fullimg{01-appt-main}
+
+The simplicity of to-dos makes them very useful for taking down quick notes or
+keeping track of tasks in a project. If you need to take down a bit more
+information about an event, you're probably looking for an \textbf{appointment}.
 Clicking on the \guiel{Appointments} tab on Organisr's main window will bring
-you to the \textbf{main appointments view}. From here, you can view your
-appointments today and on other days, edit existing appointments and add new
-ones.
+you to the main appointments view. From here, you can view your appointments
+today and on other days, edit appointments and add new ones, and make a printout
+of the appointments on a single day or month.
+
+
+\subsubsection{Creating an appointment}
+
+\fullimg{02-appt-create}
+
+On the \guiel{Appointment} tab, click the \guiel{Add new appointment} button at
+the bottom of the window. A dialog box will open and prompt you for some
+details. You need to at least enter a title, a date and a time. The
+\textit{title} should be a concise summary of the event; if you need more
+detail, add it to the \textit{description}. If you want to take a note of where
+the appointment will take place, put it in the \textit{location}. When you're
+happy, click \guiel{Confirm} to add the appointment to the day you selected.
+
+\tip{Keyboard shortcut for creating an appointment: Alt+A on the appointment
+tab.}
+
+
+\subsubsection{Editing appointments}
+
+\fullimg{03-appt-edit}
+
+Just the same as with to-dos, you are able to amend any appointment that you
+would like to change by clicking the \guiel{`E'} button next to it.
+
+
+\subsubsection{Deleting appointments}
+
+\fullimg{04-appt-delete}
+
+
+\subsubsection{Searching for specific appointments}
