--- a/src/usage.tex
+++ b/src/usage.tex
@@ -23,7 +23,8 @@ old or finished ones.
 \smallimg{02-todo-add}
 
 On the \guiel{To-do} tab, click the \guiel{Add new to-do} button at the bottom
-of the window. A dialog box will open and prompt you for the to-do details. Type
+of the window, or click the \guiel{New} toolbar button and select \guiel{New
+to-do...}. A dialog box will open and prompt you for the to-do details. Type
 in the text you would like have to displayed on list (e.g. `Send Mary the
 project email') and click \guiel{Confirm}. You can hit \guiel{Cancel} to cancel
 the new to-do operation.
@@ -102,12 +103,13 @@ of the appointments on a single day or month.
 \fullimg{02-appt-create}
 
 On the \guiel{Appointment} tab, click the \guiel{Add new appointment} button at
-the bottom of the window. A dialog box will open and prompt you for some
-details. You need to at least enter a title, a date and a time. The
-\textit{title} should be a concise summary of the event; if you need more
-detail, add it to the \textit{description}. If you want to take a note of where
-the appointment will take place, put it in the \textit{location}. When you're
-happy, click \guiel{Confirm} to add the appointment to the day you selected.
+the bottom of the window. (Alternatively, you can click \guiel{New->New
+appointment...}). A dialog box will open and prompt you for some details. You
+need to at least enter a title, a date and a time. The \textit{title} should be
+a concise summary of the event; if you need more detail, add it to the
+\textit{description}. If you want to take a note of where the appointment will
+take place, put it in the \textit{location}. When you're happy, click
+\guiel{Confirm} to add the appointment to the day you selected.
 
 \tip{Keyboard shortcut for creating an appointment: Alt+A on the appointment
 tab.}
@@ -118,12 +120,52 @@ tab.}
 \fullimg{03-appt-edit}
 
 Just the same as with to-dos, you are able to amend any appointment that you
-would like to change by clicking the \guiel{`E'} button next to it.
+would like to change by clicking the \guiel{`E'} button next to it. When you are
+finished making changes, click the \guiel{`Confirm`} button.
 
 
 \subsubsection{Deleting appointments}
 
 \fullimg{04-appt-delete}
 
+To delete an appointment, click the \guiel{`X'} button next to it.
+
+\tip{Do you really need to delete that appointment? Think of them like emails:
+it's useful to keep old appointments around in case you need to reference them
+later.}
+
 
 \subsubsection{Searching for specific appointments}
+
+\smallimg{05-appt-search}
+
+Sometimes you might remember that you have something to go to in the next few
+days, but you can't recall exactly. The appointment search dialog lets you enter
+details to search all your appointments with. You can search by title,
+description, location, or date.
+
+\begin{itemize}
+    \item TODO
+    \item Explain how fields work
+    \item i.e. first is used for title \& desc.
+\end{itemize}
+
+
+\subsubsection{View the current month's appointments}
+
+TODO
+
+
+\subsection{Troubleshooting errors}
+\subsubsection{Field 'X' is empty}
+
+\halfimg{err-empty}
+
+TODO
+
+
+\subsubsection{No appointments found for given range and descriptions}
+
+\smallimg{err-no-appts}
+
+TODO
