ready for final

--- a/lib/annotate.tex
+++ b/lib/annotate.tex
@@ -1,7 +1,8 @@
 % Generic interface to the to-do package of your choosing.
 
 % include necessary packages
-\usepackage[draft]{fixme}
+%\usepackage[draft]{fixme}
+\usepackage{fixme}
 \fxusetheme{color}
 
 \newcommand{\note}[1]{\fxnote{#1}}
